--- a/home2.html
+++ b/home2.html
@@ -20,7 +20,7 @@ document.addEventListener('mousemove',e =>{
     <div class="front">
         <nav>
             <ul>
-                <li> <a href="home1.html">HOME</a></li>
+                <li> <a href="index.html">HOME</a></li>
                 <li><a href="home4.html">WORK</a></li>
                 <li><a href="home5.html">GALLERY</a></li>
             </ul>
